[package]
name = "randcli"
version = "0.1.0"
authors = ["cympfh <cympfh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
nom = "6"
rand = "0.8.3"
rand_chacha = "0.3.0"

[[bin]]
name = "rand"
path = "src/bin/rand.rs"
