[package]
name = "randcli"
version = "0.1.6"
authors = ["cympfh <cympfh@gmail.com>"]
edition = "2018"

license = "MIT"
description = "CLI as a RNG"
repository = "https://github.com/cympfh/randcli"
readme = "README.md"

categories = ["command-line-utilities"]
keywords = ["cli", "rand"]

[dependencies]
anyhow = "1.0"
structopt = "0.3"
nom = "6"
rand = "0.8.3"
rand_chacha = "0.3.0"

[[bin]]
name = "rand"
path = "src/bin/rand.rs"
